--- a/Hammond-SPA/src/app/admin/volunteers-tab/volunteers-tab.component.html
+++ b/Hammond-SPA/src/app/admin/volunteers-tab/volunteers-tab.component.html
@@ -3,7 +3,7 @@
   <div *ngIf="!volunteerListMode && !volunteerRegisterMode">
       <ul>
 
-          <li (click)="listToggle()">View Volunteer List</li>
+          <li [routerLink]="['/admin/volunteers']">View Volunteer List</li>
           <li (click)="registerToggle()">Register New Volunteer</li>
       
         </ul>
