--- a/Hammond-SPA/src/app/admin/student-list/student-list.component.html
+++ b/Hammond-SPA/src/app/admin/student-list/student-list.component.html
@@ -4,11 +4,20 @@
     <div class="">
       <form class="form-inline" #form="ngForm" (ngSubmit)="loadUsers()" novalidate>
         <div class="form-group px-2">
-          <label for="gradeLevel">Show: </label>
+          <label for="gradeLevel">Grade: </label>
             <select name="gradeLevel" id="gradeLevel" class="form-control ml-1"
               [(ngModel)]="userParams.studentLevel">
               <option *ngFor="let studLev of studentLevel" [value]="studLev.value">
                 {{studLev.display}}
+              </option>
+            </select>            
+        </div>
+        <div class="form-group px-2" *ngIf="userType=='Volunteers' || 'volunteers'">
+          <label for="volunteerType">Volunteer: </label>
+            <select name="volunteerType" id="volunteerType" class="form-control ml-1"
+              [(ngModel)]="userParams.roleName">
+              <option *ngFor="let role of volunteerType" [ngValue]="role.value">
+                {{role.display}}
               </option>
             </select>            
         </div>
@@ -23,6 +32,7 @@
           Reset Filter
         </button>
       </form>
+      <p>{{userParams.Role}}</p>
       <div *ngFor="let user of users" class="">
         <app-user-item [user]="user"></app-user-item>
       </div>
