--- a/Hammond-SPA/src/app/users/user-item/user-item.component.html
+++ b/Hammond-SPA/src/app/users/user-item/user-item.component.html
@@ -15,6 +15,10 @@
             class="link user-name-column col-md-3 col-lg-3">
               {{user.username}}
             </div>
+            <div 
+            class="link user-name-column col-md-3 col-lg-3">
+              <div *ngFor="let role of user.userRoles">{{role.role.name}}</div>
+            </div>
             <div *ngIf="user.studentLevel">
               {{user.studentLevel}}
             </div>
