--- a/Hammond-SPA/src/app/admin/student-list/student-list.component.html
+++ b/Hammond-SPA/src/app/admin/student-list/student-list.component.html
@@ -12,7 +12,7 @@
               </option>
             </select>            
         </div>
-        <div class="form-group px-2" *ngIf="userType=='Volunteers' || 'volunteers'">
+        <div class="form-group px-2" *ngIf="userType=='Volunteers'">
           <label for="volunteerType">Volunteer: </label>
             <select name="volunteerType" id="volunteerType" class="form-control ml-1"
               [(ngModel)]="userParams.roleName">
