--- a/Hammond-SPA/src/app/mentor/mentor-stud-tab/mentor-stud-tab.component.html
+++ b/Hammond-SPA/src/app/mentor/mentor-stud-tab/mentor-stud-tab.component.html
@@ -4,7 +4,7 @@
       <ul>
 
           <li (click)="myStudentsModeToggle()">My Students</li>
-          <li (click)="allStudentsModeToggle()">MY Class</li>      
+          <li [routerLink]="['/mentor/students']">My Class</li>      
         </ul>
   </div>
 
