--- a/Hammond-SPA/src/app/assignments/assignment-item/assignment-item.component.html
+++ b/Hammond-SPA/src/app/assignments/assignment-item/assignment-item.component.html
@@ -7,7 +7,7 @@
             </div>
             <br>
             <div *ngIf="assignment.completed">Done!</div>
-            <div *ngIf="!assignment.completed" class="row">Due: {{assignment.assignment.dateAssigned | date: 'mediumDate'}}</div>
+            <div *ngIf="!assignment.completed" class="row">Due: {{assignment.assignment.dateDue | date: 'mediumDate'}}</div>
             <div>{{assignment.assignment.studentLevel}}</div>
           </div>
         </div>
