group list added to own route

--- a/Hammond-SPA/src/app/admin/groups-list/groups-list.component.html
+++ b/Hammond-SPA/src/app/admin/groups-list/groups-list.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <i class="fa fa-arrow-circle-left" (click)="backup()"></i>
+    <i class="fa fa-arrow-circle-left" [routerLink]="['/admin']"></i>
 </div>
 <div *ngFor="let group of groups">
     <ul>
