--- a/Hammond-SPA/src/app/admin/registrations/group-registration/group-registration.component.html
+++ b/Hammond-SPA/src/app/admin/registrations/group-registration/group-registration.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <i class="fa fa-arrow-circle-left" (click)="backup()"></i>
+    <i class="fa fa-arrow-circle-left" [routerLink]="['/admin']"></i>
   <div class="row">
       <div class="col-sm-4 col-md-4 col-lg-4">
         <h4>Mentors</h4>
