mentor-mygroup functioning

--- a/Hammond-SPA/src/app/mentor/mentor-stud-tab/mentor-stud-tab.component.html
+++ b/Hammond-SPA/src/app/mentor/mentor-stud-tab/mentor-stud-tab.component.html
@@ -3,7 +3,7 @@
   <div *ngIf="!studentListMode && !studentRegisterMode && !dropBoxMode">
       <ul>
 
-          <li (click)="myStudentsModeToggle()">My Students</li>
+          <li [routerLink]="['/mentor/mygroup']">My Students</li>
           <li [routerLink]="['/mentor/students']">My Class</li>      
         </ul>
   </div>
