--- a/Hammond-SPA/src/app/mentor/mentor-my-students/mentor-my-students.component.html
+++ b/Hammond-SPA/src/app/mentor/mentor-my-students/mentor-my-students.component.html
@@ -1,3 +1,3 @@
-<p>
-  mentor-my-students works!
-</p>
+<div *ngFor="let user of usergroup">
+  <div>{{user.user.firstName}} {{user.user.lastName}}</div>
+</div>
