fixed group resolver

--- a/Hammond-SPA/src/app/landingpages/student-landing/student-landing.component.html
+++ b/Hammond-SPA/src/app/landingpages/student-landing/student-landing.component.html
@@ -11,8 +11,13 @@
       <app-stud-assignment-tab [student]="user"></app-stud-assignment-tab>
     </tab>
 
+    <tab heading="My Group">
+      <app-stud-group-tab></app-stud-group-tab>
+    </tab>
+
     <tab heading="Messages">
       Messaging Component Here
     </tab>
+
   </tabset>
 </div>
