--- a/Hammond-SPA/src/app/landingpages/student-landing/student-landing.component.html
+++ b/Hammond-SPA/src/app/landingpages/student-landing/student-landing.component.html
@@ -12,7 +12,7 @@
     </tab>
 
     <tab heading="My Group">
-      <app-stud-group-tab></app-stud-group-tab>
+      <app-stud-group-tab [group]="group"></app-stud-group-tab>
     </tab>
 
     <tab heading="Messages">
