--- a/Hammond-SPA/src/app/landingpages/mentor-landing/mentor-landing.component.html
+++ b/Hammond-SPA/src/app/landingpages/mentor-landing/mentor-landing.component.html
@@ -20,6 +20,11 @@
       <tab heading="students">
         <app-mentor-stud-tab></app-mentor-stud-tab>
       </tab>
+
+      <tab heading="Messages">
+        Messaging Component Here
+      </tab>
+      
     </tabset>
   </div>
 </body>
