messaging tab up. Functionality needs checked

--- a/Hammond-SPA/src/app/landingpages/admin-landing/admin-landing.component.html
+++ b/Hammond-SPA/src/app/landingpages/admin-landing/admin-landing.component.html
@@ -24,7 +24,7 @@
       </tab>
 
       <tab heading="Messages">
-        Messaging Component Here
+        <app-messages></app-messages>
       </tab>
     </tabset>
   </div>
