--- a/Hammond-SPA/src/app/landingpages/mentor-landing/mentor-landing.component.html
+++ b/Hammond-SPA/src/app/landingpages/mentor-landing/mentor-landing.component.html
@@ -22,7 +22,7 @@
       </tab>
 
       <tab heading="Messages">
-        Messaging Component Here
+        <app-messages></app-messages>
       </tab>
       
     </tabset>
