--- a/Hammond-SPA/src/app/landingpages/student-landing/student-landing.component.html
+++ b/Hammond-SPA/src/app/landingpages/student-landing/student-landing.component.html
@@ -15,7 +15,7 @@
       </tab>
   
       <tab heading="Messages">
-        Messaging Component Here
+        <app-messages></app-messages>
       </tab>
   
     </tabset>
