--- a/Hammond-SPA/src/app/student/stud-group-tab/stud-group-tab.component.html
+++ b/Hammond-SPA/src/app/student/stud-group-tab/stud-group-tab.component.html
@@ -1,3 +1,3 @@
-<p *ngFor="let groupMember of group.userGroups">
-  {{groupMember.user.firstName}}
-</p>
+<div *ngFor="let groupMember of group.userGroups">
+  <app-user-item [user]="groupMember.user"></app-user-item>
+</div>
