--- a/Hammond-SPA/src/app/messages/messages.component.html
+++ b/Hammond-SPA/src/app/messages/messages.component.html
@@ -1,13 +1,16 @@
 <div class="container mt-5">
   <div class="row">
     <div class="btn-group">
-      <button class="btn btn-primary" [(ngModel)]="messageContainer" btnRadio="Unread" (click)="loadMessages()">
+      <button class="btn btn-primary" [(ngModel)]="messageContainer" 
+        btnRadio="Unread" (click)="loadMessages()" name="buttonUnread" ngDefaultControl>
         <i class="fa fa-envelope"></i> Unread
       </button>
-      <button class="btn btn-primary" [(ngModel)]="messageContainer" btnRadio="Inbox" (click)="loadMessages()">
+      <button class="btn btn-primary" [(ngModel)]="messageContainer"
+        btnRadio="Inbox" (click)="loadMessages()" name="buttonInbox" ngDefaultControl>
         <i class="fa fa-envelope-open"></i> Inbox
       </button>
-      <button class="btn btn-primary" [(ngModel)]="messageContainer" btnRadio="Outbox" (click)="loadMessages()">
+      <button class="btn btn-primary" [(ngModel)]="messageContainer"
+        btnRadio="Outbox" (click)="loadMessages()" name="buttonOutbox" ngDefaultControl>
         <i class="fa fa-paper-plane"></i> Outbox
       </button>
     </div>
@@ -30,14 +33,14 @@
         [queryParams]="{tab: 3}">
         <td>{{message.content}}</td>
         <td>
-          <!-- <div *ngIf="messageContainer != 'Outbox'">
-                <img src={{message?.senderPhotoUrl}} class="img-circle rounded-circle mr-1">
-                <strong>{{message.senderKnownAs}}</strong>
+          <div *ngIf="messageContainer != 'Outbox'">
+                <!-- <img src={{message?.senderPhotoUrl}} class="img-circle rounded-circle mr-1"> -->
+                <strong>{{message.senderUsername}}</strong>
           </div>
           <div *ngIf="messageContainer == 'Outbox'">
-                <img src={{message?.recipientPhotoUrl}} class="img-circle rounded-circle mr-1">
-                <strong>{{message.recipientKnownAs}}</strong>
-          </div> -->
+                <!-- <img src={{message?.recipientPhotoUrl}} class="img-circle rounded-circle mr-1"> -->
+                <strong>{{message.recipientUsername}}</strong>
+          </div>
         </td>
         <td>{{message.messageSent | timeAgo}}</td>
         <td>
