--- a/Hammond-SPA/src/app/messages/messages.component.html
+++ b/Hammond-SPA/src/app/messages/messages.component.html
@@ -42,7 +42,7 @@
                 <strong>{{message.recipientUsername}}</strong>
           </div>
         </td>
-        <td>{{message.messageSent | timeAgo}}</td>
+        <td>{{message.dateSent | timeAgo}}</td>
         <td>
           <button class="btn btn-danger">Delete</button>
         </td>
