--- a/Hammond-SPA/src/app/users/user-messages/user-messages.component.html
+++ b/Hammond-SPA/src/app/users/user-messages/user-messages.component.html
@@ -12,9 +12,9 @@
           </span>
           <div class="chat-body">
             <div class="chat-header">
-              <strong class="primary-font">{{message.senderKnownAs}}</strong>
+              <strong class="primary-font">{{message.senderUsername}}</strong>
               <small class="text-muted float-right">
-                <span class="fa fa-clock-o">{{message.messageSent | timeAgo}}</span>
+                <span class="fa fa-clock-o">{{message.dateSent | timeAgo}}</span>
               </small>
             </div>
             <p>{{message.content}}</p>
@@ -28,11 +28,11 @@
           <div class="chat-body">
             <div class="chat-header">
                 <small class="text-muted">
-                  <span class="fa fa-clock-o">{{message.messageSent | timeAgo}}</span>
+                  <span class="fa fa-clock-o">{{message.dateSent | timeAgo}}</span>
                   <span *ngIf="!message.isRead" class="text-danger">(unread)</span>
                   <span *ngIf="message.isRead" class="text-success">(Read {{message.dateRead | timeAgo}})</span>
                 </small>
-              <strong class="primary-font float-right">{{message.senderKnownAs}}</strong>
+              <strong class="primary-font float-right">{{message.senderUsername}}</strong>
               
             </div>
             <p>{{message.content}}</p>
