--- a/Hammond-SPA/src/app/messages/messages.component.html
+++ b/Hammond-SPA/src/app/messages/messages.component.html
@@ -1,16 +1,16 @@
 <div class="container mt-5">
   <div class="row">
     <div class="btn-group">
-      <button class="btn btn-primary" [(ngModel)]="messageContainer" 
-        btnRadio="Unread" (click)="loadMessages()" name="buttonUnread" ngDefaultControl>
+      <button class="btn btn-primary" [(ngModel)]="messageContainer"
+        btnRadio="Unread" (click)="loadMessages()">
         <i class="fa fa-envelope"></i> Unread
       </button>
       <button class="btn btn-primary" [(ngModel)]="messageContainer"
-        btnRadio="Inbox" (click)="loadMessages()" name="buttonInbox" ngDefaultControl>
+       btnRadio="Inbox" (click)="loadMessages()">
         <i class="fa fa-envelope-open"></i> Inbox
       </button>
       <button class="btn btn-primary" [(ngModel)]="messageContainer"
-        btnRadio="Outbox" (click)="loadMessages()" name="buttonOutbox" ngDefaultControl>
+        btnRadio="Outbox" (click)="loadMessages()">
         <i class="fa fa-paper-plane"></i> Outbox
       </button>
     </div>
@@ -28,7 +28,7 @@
         <th style="width: 20%">Sent / Received</th>
         <th style="width: 20%"></th>
       </tr>
-      <tr *ngFor="let message of messages" [routerLink]="['/members', 
+      <tr *ngFor="let message of messages" [routerLink]="['/users', 
         messageContainer == 'Outbox' ? message.recipientId : message.senderId]"
         [queryParams]="{tab: 3}">
         <td>{{message.content}}</td>
@@ -44,7 +44,7 @@
         </td>
         <td>{{message.dateSent | timeAgo}}</td>
         <td>
-          <button class="btn btn-danger">Delete</button>
+          <button class="btn btn-danger" (click)="deleteMessage(message.id)">Delete</button>
         </td>
       </tr>
     </table>
