--- a/Hammond-SPA/src/app/admin/events-tab/events-tab.component.html
+++ b/Hammond-SPA/src/app/admin/events-tab/events-tab.component.html
@@ -3,8 +3,8 @@
   <div *ngIf="!eventListMode && !eventRegisterMode">
       <ul>
 
-          <li (click)="listToggle()">View Events List</li>
-          <li (click)="registerToggle()">Create Event</li>
+          <li class="menu-nav" (click)="listToggle()">View Events List</li>
+          <li class="menu-nav" (click)="registerToggle()">Create Event</li>
       
         </ul>        
   </div>
