--- a/Hammond-SPA/src/app/admin/student-tab/student-tab.component.html
+++ b/Hammond-SPA/src/app/admin/student-tab/student-tab.component.html
@@ -4,9 +4,9 @@
         <ul>
   
             <!-- <li [routerLink]="['/admin/students']" (click)="listToggle()">View Student List</li> -->
-            <li [routerLink]="['/admin/students']">View Student List</li>
-            <li (click)="registerToggle()">Register New Student</li>
-            <li (click)="dropBoxToggle()">Upload Student File</li>
+            <li class="menu-nav" [routerLink]="['/admin/students']">View Student List</li>
+            <li class="menu-nav" (click)="registerToggle()">Register New Student</li>
+            <li class="menu-nav" (click)="dropBoxToggle()">Upload Student File</li>
         
           </ul>
     </div>
