--- a/Hammond-SPA/src/app/admin/events-tab/events-tab.component.html
+++ b/Hammond-SPA/src/app/admin/events-tab/events-tab.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     
   <div *ngIf="!eventListMode && !eventRegisterMode">
-      <ul>
+      <ul class="landing-content">
 
           <li class="menu-nav" (click)="listToggle()">View Events List</li>
           <li class="menu-nav" (click)="registerToggle()">Create Event</li>
