--- a/Hammond-SPA/src/app/admin/groups-tab/groups-tab.component.html
+++ b/Hammond-SPA/src/app/admin/groups-tab/groups-tab.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div *ngIf="!groupListMode && !groupRegisterMode">
-    <ul>
+    <ul class="landing-content">
       <li class="menu-nav" [routerLink]="['/admin/groups']">View Groups List</li>
       <li class="menu-nav" [routerLink]="['/admin/groups/register']">Create Group</li>
     </ul>
