--- a/Hammond-SPA/src/app/admin/student-tab/student-tab.component.html
+++ b/Hammond-SPA/src/app/admin/student-tab/student-tab.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     
     <div *ngIf="!studentListMode && !studentRegisterMode && !dropBoxMode">
-        <ul>
+        <ul class="landing-content">
   
             <!-- <li [routerLink]="['/admin/students']" (click)="listToggle()">View Student List</li> -->
             <li class="menu-nav" [routerLink]="['/admin/students']">View Student List</li>
