stud profile changes

--- a/Hammond-SPA/src/app/student/stud-profile-tab/stud-profile-tab.component.html
+++ b/Hammond-SPA/src/app/student/stud-profile-tab/stud-profile-tab.component.html
@@ -1,12 +1,9 @@
-<p>
-  stud-profile-tab works!
-</p>
-<p>{{student.firstName}} {{student.lastName}}</p>
+<h3>{{user.firstName}} {{user.lastName}}</h3>
 
 <div class="container">
   <ul>
-    <li>Most Recent ACT Score: {{student.actScore}}</li>
-    <li>Average ACT Score: </li>
-    <li>Next Assignment Due Date:</li>
+    <li class="menu-nav">Most Recent ACT Score: {{student.actScore}}</li>
+    <li class="menu-nav">Average ACT Score: </li>
+    <li class="menu-nav">Next Assignment Due Date:</li>
   </ul>
 </div>
