--- a/Hammond-SPA/src/styles.css
+++ b/Hammond-SPA/src/styles.css
@@ -74,7 +74,7 @@
     padding-bottom: 50%;
 }
 
-.nav-item , .dropdown, .menu-nav {
+.nav-item , .dropdown, .menu-nav, .user-item {
   cursor: pointer;
 }
 
@@ -111,6 +111,19 @@
 
 .landing-content {
   margin-top: 30px;
+}
+
+/* user profile styles */
+.prof {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.prof-ind {
+  font-size: 19;
+  font-weight: bold;
+  font-style: italic;
+  margin-left: 1%;
 }
 
 
