--- a/Hammond-SPA/src/app/landingpages/admin-landing/admin-landing.component.html
+++ b/Hammond-SPA/src/app/landingpages/admin-landing/admin-landing.component.html
@@ -2,8 +2,8 @@
   <br>
   <div class="tab-header-list">
     <tabset class="admin-tabset" #adminTabs>
-      <tab (click)="loadEvents()" heading="Events">
-        <app-events-tab [loadedEvents]="evnts"></app-events-tab>
+      <tab heading="Events">
+        <app-events-tab></app-events-tab>
       </tab>
   
       <tab heading="Assignments">
