--- a/Hammond-SPA/src/app/admin/events-list/events-list.component.html
+++ b/Hammond-SPA/src/app/admin/events-list/events-list.component.html
@@ -1,10 +1,33 @@
-<div class="container">
-  <i class="fa fa-arrow-circle-left" (click)="backup()"></i>
-  <div *ngFor="let event of evnts">
+<div class="container mt-4">
+  <i class="fa fa-arrow-circle-left" [routerLink]="['/admin']"></i>
+  
+  <form class="form-inline" #form="ngForm" (ngSubmit)="loadEvents()" novalidate>
+    <div class="form-group">
+      <label for="itemsPerPage">Entires Per Page: </label>
+      <input type="number" class="form-control ml-1" style="width: 70px" id="itemsPerPage"
+      [(ngModel)]="pagination.itemsPerPage" name="itemsPerPage">
+    </div>
+    
+    <button type="submit" class="btn btn-primary" style="margin-left:10px">Apply Filter</button>
+    <!-- <button type="button" class="btn btn-info" (click)="resetFilter()" style="margin-left:10px">
+      Reset Filter
+    </button> -->
+  </form>
+  <div class="events-list" *ngFor="let event of evnts">
     <h5>{{event.title}}</h5>
     <p>{{event.content}}</p>
 
     <p *ngIf="event.eventDate">{{event.title}} will be occuring on {{event.eventDate | date: 'mediumDate'}}</p>
     <p *ngIf="!event.eventDate">Date is to be determined</p>
+  </div>
+
+  <div class="d-flex justify-content-center">
+    <pagination [boundaryLinks]="true"
+                [totalItems]="pagination.totalItems"
+                [itemsPerPage]="pagination.itemsPerPage"
+                [(ngModel)]="pagination.currentPage"
+                (pageChanged)="pageChanged($event)"
+            previousText="&lsaquo;" nextText="&rsaquo;" firstText="&laquo;" lastText="&raquo;"> 
+    </pagination>
   </div>
 </div>
