--- a/Hammond-SPA/src/app/users/user-messages/user-messages.component.html
+++ b/Hammond-SPA/src/app/users/user-messages/user-messages.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card message-component">
   <div class="card-body">
     <div *ngIf="messages?.length === 0">
       <p>No messages yet. Say 'hi' by using the message box below</p>
